chore: Worked on swagger setup configuration
