# backend/api/controller/createOwner.go
@@ -18,7 +18,6 @@ import (
 //	@Produce        json
 //	@Security       JWT
 //	@Param          owner  body models.Owners  true    "Owner payload"
-//	@Success        200 {object} models.SuccessResponse
 //	@Router         /create-owner [post]
 func (s *Controller) CreateOwner(e echo.Context) error {
 	var newOwner models.Owners
@@ -44,7 +43,7 @@ func (s *Controller) CreateOwner(e echo.Context) error {
 		return e.JSON(http.StatusInternalServerError, models.ErrorResponse{Status: http.StatusInternalServerError, Message: "Internal server error"})
 	}
 
-	resp := models.SuccessResponse{
+	resp := models.SuccessResponse[models.Owners]{
 		Status:  http.StatusCreated,
 		Message: "Success",
 	}
