# backend/models/success-response.go
@@ -1,8 +1,8 @@
 package models
 
-type SuccessResponse struct {
-	Status  int         `json:"status"`
-	Message string      `json:"message"`
-	Data    interface{} `json:"data"`
-	Meta    MetaModel   `json:"meta"`
+type SuccessResponse[T any] struct {
+	Status  int       `json:"status"`
+	Message string    `json:"message"`
+	Data    T         `json:"data,omitzero"`
+	Meta    MetaModel `json:"meta,omitzero"`
 }
